--- a/css/main.css
+++ b/css/main.css
@@ -125,6 +125,8 @@ p {
 }
 
 .order-info a {
+  display: flex;
+  flex-direction: column;
   font-weight: bold;
   font-size: .75rem;
   color: var(--bright-blue);
